# strands-inspect

./: .gitignore  README.md  pyproject.toml
.github/workflows/: auto-release.yml  ci.yml
docs/: index.html  viewer.html
docs/examples/: 01_watch_basics.py  02_watch_sandbox.py  03_watch_granular.py  04_lock.py  05_agent_tool.py  06_profile.py  07_replay.py  08_async.py  profile_data_pipeline.json  profile_fibonacci.json  sandbox_malicious.json
strands_inspect/: __init__.py  _config.py  _decorator.py  _graph.py  _profile.py  _sandbox.py  _tool.py
tests/: conftest.py  test_async.py  test_config.py  test_coverage_gaps.py  test_decorator.py  test_graph.py  test_profile.py  test_sandbox.py  test_tool.py
